Add jquery, draw table

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -67,3 +67,16 @@ div.SignInWithAuth0{
     color: #E16531;
 }
 
+input{
+    text-align: right;
+    margin-right: 10px;
+}
+
+div.group {
+    border: 1px solid blue;
+    
+}
+
+.table{
+    
+}
