--- a/templates/view_model.1.html
+++ b/templates/view_model.1.html
@@ -69,7 +69,7 @@
     <div class="container col-lg-8 col-lg-push-2">
         <form action="/GenerateModel" method="POST">
             <h2>
-                File Name:<input type="input" name="title" text= {{printf "%s" .ModelName}}  />  
+                File Name:<input type="input" name="title" value= {{ printf "%s" .ModelTitle}}  />  
             </h2>
             <div class="col-sm-5 col-sm-push-2">
                 <table class="table">
