--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,8 @@ body{
     margin: 0 auto;
     width: 100%;
     height: auto;
-    border: 1px solid #FF0000;
+    /* border: 1px solid #FF0000; */
+    padding-bottom: 500px;
 }
 
 aside{
@@ -26,12 +27,11 @@ aside{
 }
 
 div.container{
-    
-    margin-top: 100px;
-    border: 1px solid #000;
+    margin-top: 20px;
+    /* border: 1px solid #000; */
     border-radius: 10px;
     padding: 20px 15px;
-    
+   margin-bottom: 500px; 
 }
 
 .button-group input:hover{
@@ -79,4 +79,24 @@ div.group {
 
 td{
    width: 300px; 
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+    background-color: khaki;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card_container {
+    padding: 2px 16px;
+}
+
+.key{
+    color: darkred;
+    font-size: 15px;
 }
